examples/test/testpolicy4465.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4465
  namespace: namespace55
spec:
  podSelector:
    matchLabels:
      key10: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value2
      podSelector:
        matchLabels:
          key7: value48
          key35: value39
          key36: value38
